--- a/QuanLyHocSinh/templates/staff/StudentClassInfo.html
+++ b/QuanLyHocSinh/templates/staff/StudentClassInfo.html
@@ -13,34 +13,41 @@
     {% endblock %}
     {% block content %}
     <div class="container">
-    <h2>{{ student.name }}</h2>
-    <section class="input-students">
-    <form id="student-form" action="{{ url_for('update_student', student_id=student.id) }}" method="POST">
-        {% include 'staff/student-form.html' %}
-        <label for="class">Lớp:</label>
-        <select id="class" name="class">
-            {% for class in classes %}
-                <option value="{{ class.id }}">
-                    {{ class.className }}
-                </option>
-            {% endfor %}
-        </select>
-        <label for="semester">Học Kỳ:</label>
-        <select id="semester" name="semester">
-            {% for semester in semesters %}
-                <option value="{{ semester.id }}">
-                    {{ semester.semesterName }} ({{ semester.year }})
-                </option>
-            {% endfor %}
-        </select>
-        <div class="btn-add-student">
-            <button type="submit" id="add-student">
-                <span>Hoàn Tất</span>
-            </button>
-        </div>
-    </form>
-</section>
-</div>
+        <h2>{{ student.name }}</h2>
+        <section class="input-students">
+            <form id="student-form" action="{{ url_for('update_student', student_id=student.id) }}" method="POST">
+                {% include 'staff/student-form.html' %}
+                <label for="class">Lớp:</label>
+                <select id="class" name="class">
+                    {% if not current_class_id %}
+                        <option value="none" selected>chưa có</option>
+                    {% endif %}
+                    {% for class in classes %}
+                        <option value="{{ class.id }}" {% if class.id == current_class_id %}selected{% endif %}>
+                            {{ class.className }}
+                        </option>
+                    {% endfor %}
+                </select>
+
+                <label for="semester">Học Kỳ:</label>
+                <select id="semester" name="semester">
+                    {% if not current_semester_id %}
+                        <option value="none" selected>chưa có</option>
+                    {% endif %}
+                    {% for semester in semesters %}
+                        <option value="{{ semester.id }}" {% if semester.id == current_semester_id %}selected{% endif %}>
+                            {{ semester.semesterName }} ({{ semester.year }})
+                        </option>
+                    {% endfor %}
+                </select>
+                <div class="btn-add-student">
+                    <button type="submit" id="add-student">
+                        <span>Hoàn Tất</span>
+                    </button>
+                </div>
+            </form>
+        </section>
+    </div>
 {% endblock %}
 </body>
 </html>
