--- a/QuanLyHocSinh/templates/staff/StudentEdit.html
+++ b/QuanLyHocSinh/templates/staff/StudentEdit.html
@@ -15,13 +15,25 @@
 {%endblock%}
 
 {% block content %}
+{% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+        <div id="flash-messages">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
 <!-- Tìm kiếm và reset -->
 <div class="search-container">
-    <form method="POST" action="{{ url_for('class_add') }}">
+    <form method="POST" action="{{ url_for('student_edit') }}">
         <label for="student-name">Tên:</label>
         <input type="text" id="searchStudent" name="searchStudent" placeholder="Nhập tên học sinh">
         <button type="submit" id="searchBtn" class="btn btn-primary">Tìm kiếm</button>
-        <button type="reset" id="resetBtn" class="btn btn-secondary"><a href="{{ url_for('class_add') }}">Reset</a></button>
+        <button type="reset" id="resetBtn" class="btn btn-secondary"><a href="{{ url_for('student_edit') }}">Reset</a></button>
     </form>
 </div>
 
@@ -48,7 +60,7 @@
                     <td>
                         <!-- Nút để mở modal chỉnh sửa học sinh -->
                         <a class="edit-btn btn btn-primary"
-                           href="{{ url_for('add_class', student_id=student.id) }}">
+                           href="{{ url_for('student_info', student_id=student.id) }}">
                             Sửa
                             </a>
                         <form action="{{ url_for('student_delete', student_id=student.id) }}" method="POST" style="display:inline;">
