--- a/QuanLyHocSinh/templates/Administrator/UserManagement.html
+++ b/QuanLyHocSinh/templates/Administrator/UserManagement.html
@@ -23,7 +23,7 @@ Quản lý người dùng
     <h1 class="text-center mb-4">Quản Lý Người Dùng</h1>
 
     <div class="text-end mb-4">
-        <a href="{{ url_for('create_user') }}" class="btn btn-success">Tạo tài khoản user</a>
+        <a href="{{ url_for('create_user') }}" class="btn btn-success">Tạo tài khoản</a>
     </div>
 
 
