fix Class search

--- a/QuanLyHocSinh/templates/staff/StudentClassInfo.html
+++ b/QuanLyHocSinh/templates/staff/StudentClassInfo.html
@@ -41,13 +41,18 @@
                     {% endfor %}
                 </select>
                 <div class="btn-add-student">
-                    <button type="submit" id="add-student">
-                        <span>Hoàn Tất</span>
-                    </button>
+                        <button type="submit" id="add-student">
+                            <span>Hoàn Tất</span>
+                        </button>
                 </div>
             </form>
         </section>
     </div>
 {% endblock %}
+<script>
+    window.onload = function () {
+    window.location.reload();
+};
+</script>
 </body>
 </html>
