--- a/QuanLyHocSinh/static/css/Administrator/TeacherManagement.css
+++ b/QuanLyHocSinh/static/css/Administrator/TeacherManagement.css
@@ -20,3 +20,11 @@
     color: #212529 !important;
     transition: ease 0.7s;
 }
+
+.card-header {
+    background-color: #f8f9fa;
+    font-weight: bold;
+}
+.table {
+    margin-top: 15px;
+}
