--- a/QuanLyHocSinh/templates/Administrator/TeacherManagement.html
+++ b/QuanLyHocSinh/templates/Administrator/TeacherManagement.html
@@ -1,18 +1,13 @@
 {% extends 'Administrator/base.html' %}
 
 {% block title %}
-Quản lý giáo viên
+Chỉnh sửa quy định
 {% endblock %}
 
-{% block css %}
-<link href="{{ url_for('static', filename='css/Administrator/TeacherManagement.css') }}" rel="stylesheet">
+{% block css%}
+ <link href="{{ url_for('static', filename='css/Administrator/TeacherManagement.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="{{ url_for('static', filename='js/Administrator/TeacherManagement.js') }}"></script>
+<script src="url_for('static, filename='js/Administrator/TeacherManagement.js')"></script>
 {% endblock %}
