update password change

--- a/QuanLyHocSinh/static/css/staff/Student-manage.css
+++ b/QuanLyHocSinh/static/css/staff/Student-manage.css
@@ -29,14 +29,22 @@ body {
     font-size: 0.8rem;
 }
 
+.offcanvas-header a{
+    font-size: 1rem;
+    text-decoration:none;
+    color: #fff;
+}
+
 .staff-name {
     position: absolute;
     bottom: 20%;
+    left:35%;
 }
 
 .staff-mail {
     position: absolute;
     bottom: 10%;
+    left:35%;
 }
 
 .offcanvas-header span {
