--- a/QuanLyHocSinh/templates/staff/PasswordChange.html
+++ b/QuanLyHocSinh/templates/staff/PasswordChange.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/staff/PasswordChange.css') }}">
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Trung Tâm Tài Khoản</title>
 </head>
 <body>
-$END$
+<div class="container">
+    <div class="sidebar">
+        <a href="{{ url_for('info_user') }}">Thông Tin Cá Nhân</a>
+        <a href="{{ url_for('staff') }}"><i class="fa-solid fa-backward"></i><span>Trang chính</span></a>
+    </div>
+
+    <div class="content" id="personalInfo">
+      {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                    <div class="flash {{ category }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
+      <h1>Thay Đổi Mật Khẩu</h1>
+      <form action="{{ url_for('change_password') }}" method="POST">
+          <div class="info-section">
+              <label for="current_password">Mật khẩu hiện tại</label>
+              <input type="password" id="current_password" name="current_password" required>
+          </div>
+
+          <div class="info-section">
+              <label for="new_password">Mật khẩu mới</label>
+              <input type="password" id="new_password" name="new_password" required>
+          </div>
+
+          <div class="info-section">
+              <label for="confirm_password">Xác nhận mật khẩu mới</label>
+              <input type="password" id="confirm_password" name="confirm_password" required>
+          </div>
+
+          <div class="btn-section">
+              <button type="submit">Thay đổi mật khẩu</button>
+          </div>
+      </form>
+    </div>
+</div>
 </body>
 </html>
