--- a/QuanLyHocSinh/templates/staff/menu.html
+++ b/QuanLyHocSinh/templates/staff/menu.html
@@ -14,8 +14,8 @@
         <div class="offcanvas-header">
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
             <a class="nav-link logout-btn" href="{{url_for('logout')}}"><i class="fa-solid fa-right-from-bracket"></i></a>
-            <h1 class="staff-name">staff1</h1>
-            <h1 class="staff-mail">staff1@gmail.com</h1>
+            <h1 class="staff-name"><a href="{{ url_for('info_user') }}">{{current_user.name}}</a></h1>
+            <h1 class="staff-mail">{{current_user.email}}</h1>
 
         </div>
         <div class="offcanvas-body">
