--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -10,7 +10,7 @@ Nhập điểm
 
 {% block content %}
 <div class="container mt-4 container-div">
-    <h2 class="text-center">Nhập điểm </h2>
+    <h2 class="text-center">Nhập điểm cho môn {{user_id}} </h2>
 
     <!-- Bộ lọc -->
 
