--- a/QuanLyHocSinh/templates/Administrator/base.html
+++ b/QuanLyHocSinh/templates/Administrator/base.html
@@ -37,7 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('teacher_mng')}}">Quản lý giáo viên</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('teach_mng')}}">Quản lý dạy học</a>
+                    </li>
                 </ul>
                   <!-- Chuyển Đăng xuất qua phải -->
                 <ul class="navbar-nav ms-auto">
