--- a/QuanLyHocSinh/static/css/Administrator/TeachManagement.css
+++ b/QuanLyHocSinh/static/css/Administrator/TeachManagement.css
@@ -3,7 +3,7 @@
     color: #fff;
     text-align: center;
     padding: 0.5rem 0;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
@@ -59,7 +59,7 @@
 }
 
 .table-container {
-    max-height: 400px;
+    height: 400px;
     overflow-y: auto;
 }
 
@@ -74,3 +74,4 @@ ul li {
     justify-content: space-between;
     align-items: center;
 }
+
