--- a/QuanLyHocSinh/templates/Administrator/SubjectManagement.html
+++ b/QuanLyHocSinh/templates/Administrator/SubjectManagement.html
@@ -11,12 +11,9 @@ Quản lý môn học
 {% block content %}
 {% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
-<div class="container mt-4">
-    {% for category, message in messages %}
-    <div class="alert alert-{{ category }}" role="alert">
-        {{ message }}
-    </div>
-    {% endfor %}
+<div class="alert alert-{{ messages[0][0] }} alert-dismissible fade show" role="alert">
+    {{ messages[0][1] }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {% endif %}
 {% endwith %}
