--- a/QuanLyHocSinh/static/css/Administrator/Report.css
+++ b/QuanLyHocSinh/static/css/Administrator/Report.css
@@ -28,8 +28,8 @@ main {
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     font-size:1.2rem;
+    margin-top: 20px;
 }
-
 
 .logout-btn{
     font-size:1.2rem !important;
@@ -42,18 +42,6 @@ main {
 }
 
 
-#pieChartsContainer {
-    display: flex;
-    flex-wrap: wrap; /* Cho phép các biểu đồ tròn cuộn xuống nếu không đủ chỗ */
-    gap: 20px; /* Khoảng cách giữa các biểu đồ */
-    justify-content: space-between;
-}
-
-#pieChartsContainer canvas {
-    width: 300px !important;  /* Điều chỉnh kích thước biểu đồ */
-    height: 300px !important; /* Điều chỉnh kích thước biểu đồ */
-}
-
 .class-name-label {
     text-align: center;
     margin-top: 10px;
@@ -61,4 +49,34 @@ main {
     width: 100%;
 }
 
+.canvas-div {
+    flex:1;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.5s ease-in-out; /* Tạo hiệu ứng mượt khi mở */
+    padding:0.5rem;
+}
+.canvas-div.active {
+    background-color: #f2f2f2; /* Màu nền khi vẽ biểu đồ */
+    border-radius: 15px;
+}
+.charts-container {
+    display: flex;
+    justify-content: space-between; /* Tạo khoảng cách giữa các biểu đồ */
+    gap: 20px; /* Khoảng cách giữa các thẻ con */
+}
+canvas {
+    width: 100%; /* Chiếm toàn bộ chiều rộng của container */
+    height: 100%; /* Chiều cao tự động theo container */
+}
+
+.fixed-header thead {
+    position: sticky;
+    top: 0;
+    z-index: 10; /* Giúp thead nằm trên các phần khác */
+}
+.fixed-header thead th{
+    background-color:  #262626; /* Màu nền của header */
+    color:#f2f2f2;
+}
 
