--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -10,12 +10,13 @@ Nhập điểm
 
 {% block content %}
 <div class="container mt-4 container-div">
-    <h2 class="text-center">Nhập điểm cho môn {{user_id}} </h2>
+    <h2 class="text-center">Nhập điểm cho môn {{teacher_subject}} </h2>
 
     <!-- Bộ lọc -->
+    <form action="{{ url_for('class_filter') }}" method="POST">
+        <div id="scoreboard-container">
 
-    <div id="scoreboard-container">
-        <form action="{{ url_for('class_filter') }}" method="POST">
+
             <h2 class="title">BẢNG ĐIỂM MÔN HỌC</h2>
             <div id="class-info">
                 <!-- Lớp -->
@@ -29,20 +30,6 @@ Nhập điểm
                         <option value="10B">
                         <option value="10C">
                         <option value="12A">
-                    </datalist>
-                </p>
-
-                <!-- Môn -->
-                <p>
-                    <strong>Môn:</strong>
-                    <input type="text" id="subject-input" name="subject-input" class="input-field"
-                           placeholder="Nhập môn học"
-                           list="subject-list">
-                    <datalist id="subject-list">
-                        <option value="Toán">
-                        <option value="Lý">
-                        <option value="Hóa">
-                        <option value="Anh">
                     </datalist>
                 </p>
 
@@ -71,55 +58,55 @@ Nhập điểm
                 </p>
                 <button id="class_filter" type="submit">Lọc</button>
             </div>
-        </form>
+    </form>
 
-        <!-- Bảng điểm -->
+    <!-- Bảng điểm -->
 
-        <table id="scoreboard-table">
-            <thead>
-            <tr>
-                <th class="table-header">STT</th>
-                <th class="table-header">Mã học sinh</th>
-                <th class="table-header">Họ tên</th>
-                <th class="table-header score-15min-header">Điểm 15’
-                    <button type="button" id="add-15min-btn" class="btn btn-sm btn-primary">+</button>
-                    <button type="button" id="remove-15min-btn" class="btn btn-sm btn-danger">-</button>
-                </th>
-                <th class="table-header score-test-header">Điểm 1 tiết
-                    <button type="button" id="add-test-btn" class="btn btn-sm btn-primary">+</button>
-                    <button type="button" id="remove-test-bt    `n" class="btn btn-sm btn-danger">-</button>
-                </th>
-                <th class="table-header">Điểm thi</th>
-            </tr>
-            </thead>
+    <table id="scoreboard-table">
+        <thead>
+        <tr>
+            <th class="table-header">STT</th>
+            <th class="table-header">Mã học sinh</th>
+            <th class="table-header">Họ tên</th>
+            <th class="table-header score-15min-header">Điểm 15’
+                <button type="button" id="add-15min-btn" class="btn btn-sm btn-primary">+</button>
+                <button type="button" id="remove-15min-btn" class="btn btn-sm btn-danger">-</button>
+            </th>
+            <th class="table-header score-test-header">Điểm 1 tiết
+                <button type="button" id="add-test-btn" class="btn btn-sm btn-primary">+</button>
+                <button type="button" id="remove-test-bt    `n" class="btn btn-sm btn-danger">-</button>
+            </th>
+            <th class="table-header">Điểm thi</th>
+        </tr>
+        </thead>
 
-            <tbody id="student-rows">
-            {% if error %}
-            <div class="alert alert-danger">
-                {{ error }}
-            </div>
-            {% endif %}
-            {% for s in students %}
-            <tr>
-                <td class="table-cell">{{ loop.index }}</td> <!-- Hiển thị STT -->
-                <td class="table-cell">{{ s.id }}</td>
-                <td class="table-cell">{{ s.name }}</td>
-                <td class="table-cell score-15min-container">
-                    <input type="number" class="input-cell" id="score-15min" placeholder="Điểm 15’" min="0"
-                           max="10">
-                </td>
-                <td class="table-cell test-container">
-                    <input type="number" class="input-cell test-score" placeholder="Điểm 1 tiết" min="0" max="10">
-                </td>
-                <td class="table-cell"><input type="number" class="input-cell exam-score" placeholder="Điểm thi"
-                                              min="0" max="10"></td>
-            </tr>
-            {% endfor %}
-            </tbody>
+        <tbody id="student-rows">
+        {% if error %}
+        <div class="alert alert-danger">
+            {{ error }}
+        </div>
+        {% endif %}
+        {% for s in students %}
+        <tr>
+            <td class="table-cell">{{ loop.index }}</td> <!-- Hiển thị STT -->
+            <td class="table-cell">{{ s.id }}</td>
+            <td class="table-cell">{{ s.name }}</td>
+            <td class="table-cell score-15min-container">
+                <input type="number" class="input-cell" id="score-15min" placeholder="Điểm 15’" min="0"
+                       max="10">
+            </td>
+            <td class="table-cell test-container">
+                <input type="number" class="input-cell test-score" placeholder="Điểm 1 tiết" min="0" max="10">
+            </td>
+            <td class="table-cell"><input type="number" class="input-cell exam-score" placeholder="Điểm thi"
+                                          min="0" max="10"></td>
+        </tr>
+        {% endfor %}
+        </tbody>
 
-        </table>
+    </table>
 
-    </div>
+</div>
 
 
 </div>
