--- a/QuanLyHocSinh/templates/Teacher/base.html
+++ b/QuanLyHocSinh/templates/Teacher/base.html
@@ -33,6 +33,7 @@
                 </ul>
                   <!-- Chuyển Đăng xuất qua phải -->
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"> Xin chào, {{current_user.name}}</li>
                     <li class="nav-item">
                         <a class="nav-link logout-btn" href="{{url_for('logout')}}">Đăng xuất</a>
                     </li>
