--- a/QuanLyHocSinh/templates/Administrator/Report.html
+++ b/QuanLyHocSinh/templates/Administrator/Report.html
@@ -58,7 +58,7 @@ Báo cáo thống kê
                 <canvas id="passRateChart"></canvas>
             </div>
         </div>
-        <div style="max-height: 280px; overflow-y: auto;">
+        <div style="max-height: 280px; overflow-y: auto; padding:0px; border-radius:7px;" >
             <table class="table table-bordered table-striped fixed-header">
                 <thead>
                 <tr class="table-primary">
