--- a/QuanLyHocSinh/templates/Administrator/SubjectManagement.html
+++ b/QuanLyHocSinh/templates/Administrator/SubjectManagement.html
@@ -35,7 +35,7 @@ Quản lý môn học
         </div>
     </div>
 
-    <div style="max-height: 400px; overflow-y: auto;">
+    <div class="table-wrapper" style="max-height: 400px; overflow-y: auto;">
         <!-- Bảng danh sách môn học -->
         <table class="table table-bordered">
             <thead class="table-primary text-center">
