--- a/QuanLyHocSinh/templates/Teacher/base.html
+++ b/QuanLyHocSinh/templates/Teacher/base.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="{{url_for('enter_point')}}">Nhập điểm</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('rule')}}">Xuất điểm</a>
+                        <a class="nav-link" href="{{url_for('generate_transcript')}}">Xuất điểm</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)">Link</a>
